tests/ui/ref_fields_unlabeled.stderr
Error [E0207]: this struct has more than one stored reference without a label
  --> tests/ui/ref_fields_unlabeled.jet:1:8
    |
  1 | struct Pair {
    |        ^^^^
 Why: when two `ref` fields may come from different places, each needs a label like `ref[src]`
 Fix: add labels: `ref[a] x: String` and `ref[b] y: String`
