tests/ui/ref_fields_unlabeled.fixed.jet
struct Pair {
    ref[a] a: String;
    ref[b] b: String;
}

fn main() {
    print(0);
}
